update index to remove unused carousel code (***)

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		<section id="myCarousel"
          class="carousel"
          aria-roledescription="carousel"
-         aria-label="Images from the Victorian Globe">
+         aria-label="Images from around the Victorian Globe by Non-European Artists">
 			<div class="carousel-inner">
 				<div class="controls">
 				<button class="rotation pause" aria-label="Stop automatic slide show">
@@ -250,9 +250,7 @@
 					aria-roledescription="slide"
 					aria-label="1 of 4">
 					<div class="carousel-image">
-						<!-- <a href="images/uvc_0004-deriv.jpg"> -->
 							<img src="images/uvc_0004-deriv.jpg" alt="">
-						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -260,25 +258,14 @@
 							Tommy McRae, Untitled Illustration, 1896
 						</a>
 					</h3>
-					<!-- <div class="hidden-xs hidden-sm">
-						<p>
-							<span class="contrast">
-								Tommy McRae, Untitled Illustration, 1896, public domain
-							</span>
-						</p>
-					</div> -->
 					</div>
-					<!-- .carousel-caption -->
 				</div>
-				<!-- .item -->
 				<div class="carousel-item"
 					role="group"
 					aria-roledescription="slide"
 					aria-label="2 of 4">
 					<div class="carousel-image">
-						<!-- <a href="images/uvc_0002-deriv.jpg"> -->
 							<img src="images/uvc_0002-deriv.jpg" alt="">
-						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -286,25 +273,14 @@
 							Yoshio Markino, “Earl's Court Station,” 1910
 						</a>
 					</h3>
-					<!-- <div>
-						<p>
-							<span class="contrast">
-								Yoshio Markino, “Earl's Court Station,” 1910, public domain
-							</span>
-						</p>
-					</div> -->
 					</div>
-					<!-- .carousel-caption -->
 				</div>
-				<!-- .item -->
 				<div class="carousel-item"
 					role="group"
 					aria-roledescription="slide"
 					aria-label="3 of 4">
 					<div class="carousel-image">
-						<!-- <a href="images/uvc_0001-deriv.jpg"> -->
 							<img src="images/uvc_0001-deriv.jpg" alt="">
-						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -312,48 +288,26 @@
 							Anonymous Fante Artist, Asafo Flag, 1910
 						</a>
 					</h3>
-					<!-- <div>
-						<p>
-							<span class="contrast">
-								Anonymous Fante Artist, Asafo Flag, 1910, educational fair use
-							</span>
-						</p>
-					</div> -->
 					</div>
-					<!-- .carousel-caption -->
 				</div>
-				<!-- .item -->
 				<div class="carousel-item"
 					role="group"
 					aria-roledescription="slide"
 					aria-label="4 of 4">
 					<div class="carousel-image">
-						<!-- <a href="images/uvc_0003-deriv.jpg"> -->
 							<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
-						<!-- </a> -->
 					</div>
 					<div class="carousel-caption">
 					<h3>
 						<a href="#kalighat" id="carousel-label-4">
-							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s
+							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
 						</a>
 					</h3>
-					<!-- <div>
-						<p>
-						<span class="contrast">
-							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, CC0
-						</span>
-						</p>
-					</div> -->
 					</div>
-					<!-- .carousel-caption -->
 				</div>
-				<!-- .item -->
 				</div>
 			</div>
-			<!-- carousel-inner -->
 			</section>
-			<!-- /.carousel -->
 			<!-- <div class="col-sm-1"></div> -->
 
 		<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
@@ -410,7 +364,7 @@
 
 				<p id="fante"><em>Slide #3</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art.</p>
 
-				<p id="kalighat"><em>Slide #4</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved.”</p>
+				<p id="kalighat"><em>Slide #4</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved.”</p>
 		</section>
     </main>
 
