update index for site code text

--- a/index.html
+++ b/index.html
@@ -366,7 +366,15 @@
 
 				<p id="kalighat"><em>Slide #4</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art, Cleveland. CC0 “No Rights Reserved.”</p>
 		</section>
-    </main>
+	
+		<br/>
+
+		<section aria-labelledby="site-code" class="smaller">
+			<h2 id="site-code">Site code</h2>
+			<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commerical purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to support accessibility for people with disabilities.</p>
+		</section>
+
+		</main>
 
 	<!--<aside class="credits" id="credits-div">
 		<hr />
