--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 		<section aria-labelledby="site-code" class="smaller">
 			<h2 id="site-code">Site code</h2>
-			<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commerical purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to support accessibility for people with disabilities.</p>
+			<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commerical purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
 		</section>
 
 		</main>
