--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          aria-label="Images from around the Victorian Globe by Non-European Artists">
 			<div class="carousel-inner">
 				<div class="controls">
-				<button class="rotation pause" aria-label="Stop automatic slide show">
+				<button class="rotation pause" aria-label="Stop automatic slide show" title="Rotation Pause">
 					<svg width="42"
 						height="34"
 						version="1.1"
@@ -74,7 +74,8 @@
 				</button>
 				<button class="previous"
 						aria-controls="myCarousel-items"
-						aria-label="Previous Slide">
+						aria-label="Previous Slide"
+						title="Previous Slide">
 					<svg width="42"
 						height="34"
 						version="1.1"
@@ -98,7 +99,8 @@
 				</button>
 				<button class="next"
 						aria-controls="myCarousel-items"
-						aria-label="Next Slide">
+						aria-label="Next Slide"
+						title="Next Slide">
 					<svg width="42"
 						height="34"
 						version="1.1"
