update index for responsive images

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					aria-roledescription="slide"
 					aria-label="1 of 4">
 					<div class="carousel-image">
-							<img src="images/uvc_0004-deriv.jpg" alt="">
+							<img src="images/uvc_0004-deriv-1100px.jpg" srcset="images/uvc_0004-deriv-400px.jpg 400w, images/uvc_0004-deriv-550px.jpg 550w, images/uvc_0004-deriv-700px.jpg 700w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -146,7 +146,7 @@
 					aria-roledescription="slide"
 					aria-label="2 of 4">
 					<div class="carousel-image">
-							<img src="images/uvc_0002-deriv.jpg" alt="">
+							<img src="images/uvc_0002-deriv-1100px.jpg" srcset="images/uvc_0002-deriv-400px.jpg 400w, images/uvc_0002-deriv-550px.jpg 550w, images/uvc_0002-deriv-700px.jpg 700w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-1100px.jpg 1100w, images/uvc_0002-deriv-1400px.jpg 1400w, images/uvc_0002-deriv-1700px.jpg 1700w, images/uvc_0002-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -161,7 +161,7 @@
 					aria-roledescription="slide"
 					aria-label="3 of 4">
 					<div class="carousel-image">
-							<img src="images/uvc_0001-deriv.jpg" alt="">
+							<img src="images/uvc_0001-deriv-1100px.jpg" srcset="images/uvc_0001-deriv-400px.jpg 400w, images/uvc_0001-deriv-550px.jpg 550w, images/uvc_0001-deriv-700px.jpg 700w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 					</div>
 					<div class="carousel-caption">
 					<h3>
@@ -176,7 +176,7 @@
 					aria-roledescription="slide"
 					aria-label="4 of 4">
 					<div class="carousel-image">
-							<img src="images/uvc_0003-deriv.jpg" alt="" style="object-position: 50% 0;">
+							<img src="images/uvc_0003-deriv-1100px.jpg" srcset="images/uvc_0003-deriv-400px.jpg 400w, images/uvc_0003-deriv-550px.jpg 550w, images/uvc_0003-deriv-700px.jpg 700w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-1100px.jpg 1100w, images/uvc_0003-deriv-1400px.jpg 1400w, images/uvc_0003-deriv-1700px.jpg 1700w, images/uvc_0003-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
 					</div>
 					<div class="carousel-caption">
 					<h3>
