--- a/index-for-dev.html
+++ b/index-for-dev.html
@@ -8,16 +8,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens." />
 	<meta name="keywords" content="victorian studies,critical race studies,undisciplining" />
-	<meta name="theme-color" content="#2e68ac"/>
+	<meta name="theme-color" content="#209cee"/>
     <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/../fonts/jacksilver-webfont.woff2"/>
-	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/../fonts/jacksilver-webfont.woff"/>
-	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/../fonts/sourcesanspro-regular-webfont.woff2"/>
-	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/../fonts/sourcesanspro-regular-webfont.woff"/>
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/jacksilver-webfont.woff2"/>
+	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/sourcesanspro-regular-webfont.woff2"/>
+	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/sourcesanspro-regular-webfont.woff"/>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 	<script>
