--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.">
-<meta name=keywords content="victorian studies,critical race studies,undisciplining">
+<meta name=keywords content="victorian studies,critical race studies,undisciplining,one more voice,accessible,responsive">
 <meta name=theme-color content=#209cee>
 <link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon-180x180.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
