--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/jacksilver-webfont.woff"/>
 	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/sourcesanspro-regular-webfont.woff2"/>
 	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/sourcesanspro-regular-webfont.woff"/>
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-regular-webfont.woff2"/>
+	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-regular-webfont.woff"/>
+	<link rel="preload" as="font" type="font/woff2" crossorigin href="fonts/notoserif-bold-webfont.woff2"/>
+	<link rel="preload" as="font" type="font/woff" crossorigin href="fonts/notoserif-bold-webfont.woff"/>	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 	<script>
