--- a/index-mini.html
+++ b/index-mini.html
@@ -16,6 +16,10 @@
 <link rel=preload as=font type=font/woff crossorigin href=fonts/jacksilver-webfont.woff>
 <link rel=preload as=font type=font/woff2 crossorigin href=fonts/sourcesanspro-regular-webfont.woff2>
 <link rel=preload as=font type=font/woff crossorigin href=fonts/sourcesanspro-regular-webfont.woff>
+<link rel=preload as=font type=font/woff2 crossorigin href=fonts/notoserif-regular-webfont.woff2>
+<link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-regular-webfont.woff>
+<link rel=preload as=font type=font/woff2 crossorigin href=fonts/notoserif-bold-webfont.woff2>
+<link rel=preload as=font type=font/woff crossorigin href=fonts/notoserif-bold-webfont.woff>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-31768072-6")</script>
 </head>
