--- a/index-mini.html
+++ b/index-mini.html
@@ -142,7 +142,7 @@ Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
 </section>
 <hr class=section-divider>
 <section aria-labelledby=images class=smaller>
-<h3 id=images>Slideshow images</h3>
+<h3 id=images>Slideshow Images</h3>
 <p id=mcrae><em>Slide #1</em>: Tommy McRae. Untitled Illustration. In <a href=https://archive.org/details/cu31924029909060/page/n5/mode/2up>Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 <p id=markino><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href=https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up>A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
 <p id=fante><em>Slide #3</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art.</p>
@@ -150,7 +150,7 @@ Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
 </section>
 <br>
 <section aria-labelledby=site-code class=smaller>
-<h3 id=site-code>Site code</h3>
+<h3 id=site-code>Site code and Accessibility</h3>
 <p>The code for this site is adapted from the <a href=https://onemorevoice.org/ >One More Voice</a> project site, is released under a <a href=https://creativecommons.org/licenses/by-nc/4.0/ >Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commerical purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
 </section>
 </main>
