--- a/index-mini.html
+++ b/index-mini.html
@@ -150,7 +150,7 @@ Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
 </section>
 <br>
 <section aria-labelledby=site-code class=smaller>
-<h3 id=site-code>Site code and Accessibility</h3>
+<h3 id=site-code>Site Code and Accessibility</h3>
 <p>The code for this site is adapted from the <a href=https://onemorevoice.org/ >One More Voice</a> project site, is released under a <a href=https://creativecommons.org/licenses/by-nc/4.0/ >Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commerical purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
 </section>
 </main>
