--- a/index-dev.html
+++ b/index-dev.html
@@ -127,74 +127,59 @@
 					</svg>
 				</button>
 				</div>
-				<div id="myCarousel-items"
-					class="carousel-items"
-					aria-live="off">
-				<div class="carousel-item active"
-					role="group"
-					aria-roledescription="slide"
-					aria-label="1 of 4">
-					<div class="carousel-image">
-							<img src="images/uvc_0004-deriv-1100px.jpg" srcset="images/uvc_0004-deriv-400px.jpg 400w, images/uvc_0004-deriv-550px.jpg 550w, images/uvc_0004-deriv-700px.jpg 700w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+				<div id="myCarousel-items" class="carousel-items" aria-live="off">
+					<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
+						<div class="carousel-image">
+								<img src="images/uvc_0003-deriv-1100px.jpg" srcset="images/uvc_0003-deriv-400px.jpg 400w, images/uvc_0003-deriv-550px.jpg 550w, images/uvc_0003-deriv-700px.jpg 700w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-1100px.jpg 1100w, images/uvc_0003-deriv-1400px.jpg 1400w, images/uvc_0003-deriv-1700px.jpg 1700w, images/uvc_0003-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+						</div>
+						<div class="carousel-caption">
+							<h3>
+								<a href="#kalighat" id="carousel-label-1">
+									Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
+								</a>
+							</h3>
+						</div>
 					</div>
-					<div class="carousel-caption">
-					<h3>
-						<a href="#mcrae" id="carousel-label-1">
-							Tommy McRae, Untitled Illustration, 1896
-						</a>
-					</h3>
+					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
+						<div class="carousel-image">
+								<img src="images/uvc_0002-deriv-1100px.jpg" srcset="images/uvc_0002-deriv-400px.jpg 400w, images/uvc_0002-deriv-550px.jpg 550w, images/uvc_0002-deriv-700px.jpg 700w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-1100px.jpg 1100w, images/uvc_0002-deriv-1400px.jpg 1400w, images/uvc_0002-deriv-1700px.jpg 1700w, images/uvc_0002-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+						</div>
+						<div class="carousel-caption">
+							<h3>
+								<a href="#markino" id="carousel-label-2">
+									Yoshio Markino, “Earl's Court Station,” 1910
+								</a>
+							</h3>
+						</div>
+					</div>					
+					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
+						<div class="carousel-image">
+								<img src="images/uvc_0004-deriv-1100px.jpg" srcset="images/uvc_0004-deriv-400px.jpg 400w, images/uvc_0004-deriv-550px.jpg 550w, images/uvc_0004-deriv-700px.jpg 700w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+						</div>
+						<div class="carousel-caption">
+							<h3>
+								<a href="#mcrae" id="carousel-label-3">
+									Tommy McRae, Untitled Illustration, 1896
+								</a>
+							</h3>
+						</div>
+					</div>	
+					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
+						<div class="carousel-image">
+								<img src="images/uvc_0001-deriv-1100px.jpg" srcset="images/uvc_0001-deriv-400px.jpg 400w, images/uvc_0001-deriv-550px.jpg 550w, images/uvc_0001-deriv-700px.jpg 700w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+						</div>
+						<div class="carousel-caption">
+							<h3>
+								<a href="#fante" id="carousel-label-4">
+									Anonymous Fante Artist, Asafo Flag, 1910
+								</a>
+							</h3>
+						</div>
 					</div>
-				</div>
-				<div class="carousel-item"
-					role="group"
-					aria-roledescription="slide"
-					aria-label="2 of 4">
-					<div class="carousel-image">
-							<img src="images/uvc_0002-deriv-1100px.jpg" srcset="images/uvc_0002-deriv-400px.jpg 400w, images/uvc_0002-deriv-550px.jpg 550w, images/uvc_0002-deriv-700px.jpg 700w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-1100px.jpg 1100w, images/uvc_0002-deriv-1400px.jpg 1400w, images/uvc_0002-deriv-1700px.jpg 1700w, images/uvc_0002-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
-					</div>
-					<div class="carousel-caption">
-					<h3>
-						<a href="#markino" id="carousel-label-2">
-							Yoshio Markino, “Earl's Court Station,” 1910
-						</a>
-					</h3>
-					</div>
-				</div>
-				<div class="carousel-item"
-					role="group"
-					aria-roledescription="slide"
-					aria-label="3 of 4">
-					<div class="carousel-image">
-							<img src="images/uvc_0001-deriv-1100px.jpg" srcset="images/uvc_0001-deriv-400px.jpg 400w, images/uvc_0001-deriv-550px.jpg 550w, images/uvc_0001-deriv-700px.jpg 700w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
-					</div>
-					<div class="carousel-caption">
-					<h3>
-						<a href="#fante" id="carousel-label-3">
-							Anonymous Fante Artist, Asafo Flag, 1910
-						</a>
-					</h3>
-					</div>
-				</div>
-				<div class="carousel-item"
-					role="group"
-					aria-roledescription="slide"
-					aria-label="4 of 4">
-					<div class="carousel-image">
-							<img src="images/uvc_0003-deriv-1100px.jpg" srcset="images/uvc_0003-deriv-400px.jpg 400w, images/uvc_0003-deriv-550px.jpg 550w, images/uvc_0003-deriv-700px.jpg 700w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-1100px.jpg 1100w, images/uvc_0003-deriv-1400px.jpg 1400w, images/uvc_0003-deriv-1700px.jpg 1700w, images/uvc_0003-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
-					</div>
-					<div class="carousel-caption">
-					<h3>
-						<a href="#kalighat" id="carousel-label-4">
-							Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
-						</a>
-					</h3>
-					</div>
-				</div>
 				</div>
 			</div>
-			</section>
-			<!-- <div class="col-sm-1"></div> -->
-
+		</section>
+		<!-- <div class="col-sm-1"></div> -->
 		<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
 		<hr/>
     </header>
@@ -234,9 +219,9 @@
 
 			<p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
 			
-			<p>The deadline for submissions is November 15, 2020. Syllabi abstracts can be submitted directly through this <a href=https://forms.gle/nTUMTr7E5hH5G3ZV6>Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
+			<p>The deadline for submissions is November 15, 2020. Syllabi abstracts can be submitted directly through this <a href="https://forms.gle/nTUMTr7E5hH5G3ZV6">Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
 			
-			<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
+			<p>Questions about this CFS and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to  <a href="mailto:chaozonbauer@gmail.com">Pearl Chaozon Bauer</a>. To be placed on the project mailing list, kindly fill out this <a href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google mailing list form</a>.</p>
 		</section>
 
 		<hr class="section-divider"/>
