--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id=myCarousel-items class=carousel-items aria-live=off>
 <div class="carousel-item active" role=group aria-roledescription=slide aria-label="1 of 4">
 <div class=carousel-image>
-<img src=images/uvc_0003-deriv-1100px.jpg srcset="images/uvc_0003-deriv-400px.jpg 400w, images/uvc_0003-deriv-550px.jpg 550w, images/uvc_0003-deriv-700px.jpg 700w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-1100px.jpg 1100w, images/uvc_0003-deriv-1400px.jpg 1400w, images/uvc_0003-deriv-1700px.jpg 1700w, images/uvc_0003-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position:50% 0">
+<img src=images/uvc_0003-deriv-900px.jpg srcset="images/uvc_0003-deriv-1800px.jpg 1800w, images/uvc_0003-deriv-1536px.jpg 1536w, images/uvc_0003-deriv-1280px.jpg 1280w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-768px.jpg 768w, images/uvc_0003-deriv-640px.jpg 640w, images/uvc_0003-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position:50% 0">
 </div>
 <div class=carousel-caption>
 <h3>
@@ -71,7 +71,7 @@ Anonymous Indian Artist, “Durga Killing the Demon Mahisha,” 1800s, detail
 </div>
 <div class=carousel-item role=group aria-roledescription=slide aria-label="2 of 4">
 <div class=carousel-image>
-<img src=images/uvc_0002-deriv-1100px.jpg srcset="images/uvc_0002-deriv-400px.jpg 400w, images/uvc_0002-deriv-550px.jpg 550w, images/uvc_0002-deriv-700px.jpg 700w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-1100px.jpg 1100w, images/uvc_0002-deriv-1400px.jpg 1400w, images/uvc_0002-deriv-1700px.jpg 1700w, images/uvc_0002-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+<img src=images/uvc_0002-deriv-900px.jpg srcset="images/uvc_0002-deriv-1800px.jpg 1800w, images/uvc_0002-deriv-1536px.jpg 1536w, images/uvc_0002-deriv-1280px.jpg 1280w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-768px.jpg 768w, images/uvc_0002-deriv-640px.jpg 640w, images/uvc_0002-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 </div>
 <div class=carousel-caption>
 <h3>
@@ -83,7 +83,7 @@ Yoshio Markino, “Earl's Court Station,” 1910
 </div>
 <div class=carousel-item role=group aria-roledescription=slide aria-label="3 of 4">
 <div class=carousel-image>
-<img src=images/uvc_0004-deriv-1100px.jpg srcset="images/uvc_0004-deriv-400px.jpg 400w, images/uvc_0004-deriv-550px.jpg 550w, images/uvc_0004-deriv-700px.jpg 700w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+<img src=images/uvc_0004-deriv-900px.jpg srcset="images/uvc_0004-deriv-1800px.jpg 1800w, images/uvc_0004-deriv-1536px.jpg 1536w, images/uvc_0004-deriv-1280px.jpg 1280w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-768px.jpg 768w, images/uvc_0004-deriv-640px.jpg 640w, images/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 </div>
 <div class=carousel-caption>
 <h3>
@@ -95,7 +95,7 @@ Tommy McRae, Untitled Illustration, 1896
 </div>
 <div class=carousel-item role=group aria-roledescription=slide aria-label="4 of 4">
 <div class=carousel-image>
-<img src=images/uvc_0001-deriv-1100px.jpg srcset="images/uvc_0001-deriv-400px.jpg 400w, images/uvc_0001-deriv-550px.jpg 550w, images/uvc_0001-deriv-700px.jpg 700w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+<img src=images/uvc_0001-deriv-900px.jpg srcset="images/uvc_0001-deriv-1800px.jpg 1800w, images/uvc_0001-deriv-1536px.jpg 1536w, images/uvc_0001-deriv-1280px.jpg 1280w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-768px.jpg 768w, images/uvc_0001-deriv-640px.jpg 640w, images/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 </div>
 <div class=carousel-caption>
 <h3>
@@ -135,7 +135,7 @@ Anonymous Fante Artist, Asafo Flag, 1910
 <section aria-labelledby=syllabi>
 <h2 id=syllabi>Call for Syllabi (CFS)</h2>
 <p style=padding-top:.5em><strong>Deadline:</strong> November 15, 2020</p>
-<p><a href=https://undiscipliningvc.org/>Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
+<p><a href=https://undiscipliningvc.org/ >Undisciplining the Victorian Classroom</a> is a new, digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. Extending the critical intervention made by the recent piece in the LA Review of Books, “<a href=https://lareviewofbooks.org/article/undisciplining-victorian-studies/ >Undisciplining Victorian Studies</a>,” this project seeks to 1) foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds and 2) introduce less-studied, global, Victorian-era authors into the classroom. The project is organized by Pearl Chaozon Bauer (Notre Dame de Namur University), Ryan Fong (Kalamazoo College), Sophia Hsu (Lehman College CUNY), and Adrian S. Wisnicki (University of Nebraska-Lincoln).</p>
 <p>Currently, we are in the process of building content that models antiracist teaching practices for Victorian studies and are seeking syllabi from instructors whose work in the classroom aligns with the mission of <em>Undisciplining the Victorian Classroom.</em> This content will be published on our website after a peer review process, to become part of our open-access resource. While these courses should feature a text or texts from the Victorian era, the syllabi do not need to be exclusively focused on 19th-century literature. Such syllabi can be original syllabi from courses already taught, revised versions of previously used syllabi, or syllabi that have been designed but not yet deployed in a course setting.</p>
 <p>For this Call for Syllabi (CFS), we request short abstracts (300 words maximum) that summarize syllabus content, provide a critical reflection on course design, and cite a small, representative selection of primary and/or secondary course materials. Abstracts will be reviewed by the organizers of <em>Undisciplining the Victorian Classroom</em>, and select instructors will be invited to submit full syllabi along with short, correlated summaries of pedagogical critical intervention. Full syllabi and summaries will undergo full peer review and, if successful, be published on our website.</p>
 <p>The deadline for submissions is November 15, 2020. Syllabi abstracts can be submitted directly through this <a href=https://forms.gle/nTUMTr7E5hH5G3ZV6>Google syllabus submission form</a>. Anyone with relevant professional interests is encouraged to apply, but we are especially interested in submissions from early-career scholars and those with backgrounds that are under-represented in Victorian Studies.</p>
@@ -148,7 +148,6 @@ Anonymous Fante Artist, Asafo Flag, 1910
 <p id=markino><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” In <a href=https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up>A Japanese Artist in London</a>, by Yoshio Markino, 196. London: Chatto & Windus, 1910. Public domain image.</p>
 <p id=mcrae><em>Slide #3</em>: Tommy McRae. Untitled Illustration. In <a href=https://archive.org/details/cu31924029909060/page/n5/mode/2up>Australian Legendary Tales</a>, 114. Edited and translated by K. Langloh Parker. London; Melbourne: David Nutt; Melville, Mullen & Slade, 1896. Public domain image.</p>
 <p id=fante><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Textile and Fiber Arts, 88-9-1. Smithsonian Institution. National Museum of African Art.</p>
-
 </section>
 <br>
 <section aria-labelledby=site-code class=smaller>
