--- a/index-dev.html
+++ b/index-dev.html
@@ -130,7 +130,7 @@
 				<div id="myCarousel-items" class="carousel-items" aria-live="off">
 					<div class="carousel-item active" role="group" aria-roledescription="slide" aria-label="1 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0003-deriv-1100px.jpg" srcset="images/uvc_0003-deriv-400px.jpg 400w, images/uvc_0003-deriv-550px.jpg 550w, images/uvc_0003-deriv-700px.jpg 700w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-1100px.jpg 1100w, images/uvc_0003-deriv-1400px.jpg 1400w, images/uvc_0003-deriv-1700px.jpg 1700w, images/uvc_0003-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
+								<img src="images/uvc_0003-deriv-900px.jpg" srcset="images/uvc_0003-deriv-1800px.jpg 1800w, images/uvc_0003-deriv-1536px.jpg 1536w, images/uvc_0003-deriv-1280px.jpg 1280w, images/uvc_0003-deriv-900px.jpg 900w, images/uvc_0003-deriv-768px.jpg 768w, images/uvc_0003-deriv-640px.jpg 640w, images/uvc_0003-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Demon, resembling a lion, attacking a green-skinned man who leans back in avoidance." style="object-position: 50% 0;">
 						</div>
 						<div class="carousel-caption">
 							<h3>
@@ -142,7 +142,7 @@
 					</div>
 					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="2 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0002-deriv-1100px.jpg" srcset="images/uvc_0002-deriv-400px.jpg 400w, images/uvc_0002-deriv-550px.jpg 550w, images/uvc_0002-deriv-700px.jpg 700w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-1100px.jpg 1100w, images/uvc_0002-deriv-1400px.jpg 1400w, images/uvc_0002-deriv-1700px.jpg 1700w, images/uvc_0002-deriv-2000px.jpg 2000w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
+								<img src="images/uvc_0002-deriv-900px.jpg" srcset="images/uvc_0002-deriv-1800px.jpg 1800w, images/uvc_0002-deriv-1536px.jpg 1536w, images/uvc_0002-deriv-1280px.jpg 1280w, images/uvc_0002-deriv-900px.jpg 900w, images/uvc_0002-deriv-768px.jpg 768w, images/uvc_0002-deriv-640px.jpg 640w, images/uvc_0002-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="People, many in formal attire, standing outside at night with with lights and signs overhead.">
 						</div>
 						<div class="carousel-caption">
 							<h3>
@@ -154,7 +154,7 @@
 					</div>					
 					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0004-deriv-1100px.jpg" srcset="images/uvc_0004-deriv-400px.jpg 400w, images/uvc_0004-deriv-550px.jpg 550w, images/uvc_0004-deriv-700px.jpg 700w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+								<img src="images/uvc_0004-deriv-900px.jpg" srcset="images/uvc_0004-deriv-1800px.jpg 1800w, images/uvc_0004-deriv-1536px.jpg 1536w, images/uvc_0004-deriv-1280px.jpg 1280w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-768px.jpg 768w, images/uvc_0004-deriv-640px.jpg 640w, images/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 						</div>
 						<div class="carousel-caption">
 							<h3>
@@ -166,7 +166,7 @@
 					</div>	
 					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0001-deriv-1100px.jpg" srcset="images/uvc_0001-deriv-400px.jpg 400w, images/uvc_0001-deriv-550px.jpg 550w, images/uvc_0001-deriv-700px.jpg 700w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-1100px.jpg 1100w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+								<img src="images/uvc_0001-deriv-900px.jpg" srcset="images/uvc_0001-deriv-1800px.jpg 1800w, images/uvc_0001-deriv-1536px.jpg 1536w, images/uvc_0001-deriv-1280px.jpg 1280w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-768px.jpg 768w, images/uvc_0001-deriv-640px.jpg 640w, images/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 						</div>
 						<div class="carousel-caption">
 							<h3>
