--- a/index-dev.html
+++ b/index-dev.html
@@ -154,7 +154,7 @@
 					</div>					
 					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="3 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0004-deriv-900px.jpg" srcset="images/uvc_0004-deriv-1800px.jpg 1800w, images/uvc_0004-deriv-1536px.jpg 1536w, images/uvc_0004-deriv-1280px.jpg 1280w, images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-768px.jpg 768w, images/uvc_0004-deriv-640px.jpg 640w, images/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
+								<img src="images/uvc_0004-deriv-900px.jpg" srcset="images/uvc_0004-deriv-900px.jpg 900w, images/uvc_0004-deriv-768px.jpg 768w, images/uvc_0004-deriv-640px.jpg 640w, images/uvc_0004-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose.">
 						</div>
 						<div class="carousel-caption">
 							<h3>
@@ -166,7 +166,7 @@
 					</div>	
 					<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
 						<div class="carousel-image">
-								<img src="images/uvc_0001-deriv-900px.jpg" srcset="images/uvc_0001-deriv-1800px.jpg 1800w, images/uvc_0001-deriv-1536px.jpg 1536w, images/uvc_0001-deriv-1280px.jpg 1280w, images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-768px.jpg 768w, images/uvc_0001-deriv-640px.jpg 640w, images/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
+								<img src="images/uvc_0001-deriv-900px.jpg" srcset="images/uvc_0001-deriv-900px.jpg 900w, images/uvc_0001-deriv-768px.jpg 768w, images/uvc_0001-deriv-640px.jpg 640w, images/uvc_0001-deriv-320px.jpg 320w" sizes="(min-width: 1300px) 898px, (min-width: 1000px) calc(53.57vw + 212px), (min-width: 960px) 898px, calc(93.75vw + 17px)" alt="British flag; group of individuals surrounding and with ropes tied to the limbs of a larger figure.">
 						</div>
 						<div class="carousel-caption">
 							<h3>
