--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 <?php flush(); ?>
 <body class=essay>
+<article>
 <nav id=skiptocontent aria-labelledby=nav0>
 <a href=#main id=nav0 tabindex=0>skip to main content</a>
 </nav>
@@ -159,19 +160,20 @@ Anonymous Fante Artist, Asafo Flag, 1910
 <hr>
 <p>&#169; 2020, <a href=https://creativecommons.org/licenses/by/4.0/ >CC BY 4.0</a> | Hosted by <a href=https://github.com/undiscipliningvc>GitHub</a> | Design &amp; admin: <a href=mailto:awisnicki@yahoo.com>Adrian S. Wisnicki</a> | Contact: <a href=mailto:chaozonbauer@gmail.com>Pearl Chaozon Bauer</a></p>
 </footer>
+</article>
 <script>
 /* Service Worker */
-		/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
-		if ("serviceWorker" in navigator) {
-		navigator.serviceWorker
-			.register("sw.js")
-			.then(serviceWorker => {
-			console.log("Service Worker registered: ", serviceWorker);
-			})
-			.catch(error => {
-			console.error("Error registering the Service Worker: ", error);
-			});
-		}
+/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
+if ("serviceWorker" in navigator) {
+navigator.serviceWorker
+	.register("sw.js")
+	.then(serviceWorker => {
+	console.log("Service Worker registered: ", serviceWorker);
+	})
+	.catch(error => {
+	console.error("Error registering the Service Worker: ", error);
+	});
+}
 </script>
 <script src=scripts/carousel.js></script>
 <script src=scripts/carouselItem.js></script>
