--- a/index-dev.html
+++ b/index-dev.html
@@ -202,8 +202,8 @@
 					<h2 id="mission">Mission Statement</h2>
 					<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging Black, Postcolonial, Indigenous, Asian-American, Latinx, Decolonial, Feminist, Queer, and Critical Ethnic Studies scholarship. The project seeks to:</p>
 					<ol>
-						<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literature of all kinds, and</li>
-						<li>introduce less-studied, global, Victorian-era authors into the classroom.</li>
+						<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
+						<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 					</ol>
 					<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt the racist partitioning and co-opting of knowledge in Victorian Studies.</p>
 				</section>
