--- a/index-dev.html
+++ b/index-dev.html
@@ -9,6 +9,9 @@
 		<meta name="description" content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens." />
 		<meta name="keywords" content="victorian studies,critical race studies,undisciplining,antiracist,positive race consciousness,restorative justice,race and social movements,social justice,education,pedagogy,classroom,19th century,nineteenth century,pearl chaozon bauer,ryan fong,sophia hsu,adrian s. wisnicki,one more voice,accessible,responsive" />
 		<meta name="theme-color" content="#1C4C87"/>
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<meta http-equiv="Expires" content="0" />		
 		<link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="images/icons/favicon-16x16.png">
