--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <meta name=description content="Home page for Undisciplining the Victorian Classroom, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.">
 <meta name=keywords content="victorian studies,critical race studies,undisciplining,antiracist,positive race consciousness,restorative justice,race and social movements,social justice,education,pedagogy,classroom,19th century,nineteenth century,pearl chaozon bauer,ryan fong,sophia hsu,adrian s. wisnicki,one more voice,accessible,responsive">
 <meta name=theme-color content=#1C4C87>
+<meta http-equiv=Cache-Control content="no-cache, no-store, must-revalidate">
+<meta http-equiv=Pragma content=no-cache>
+<meta http-equiv=Expires content=0>
 <link rel=apple-touch-icon sizes=180x180 href=images/icons/apple-touch-icon-180x180.png>
 <link rel=icon type=image/png sizes=32x32 href=images/icons/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=images/icons/favicon-16x16.png>
@@ -163,17 +166,17 @@ Anonymous Fante Artist, Asafo Flag, 1910
 </article>
 <script>
 /* Service Worker */
-/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
-if ("serviceWorker" in navigator) {
-navigator.serviceWorker
-	.register("sw.js")
-	.then(serviceWorker => {
-	console.log("Service Worker registered: ", serviceWorker);
-	})
-	.catch(error => {
-	console.error("Error registering the Service Worker: ", error);
-	});
-}
+			/* Taken from https://pwa-workshop.js.org/2-service-worker/#registering-the-service-worker */
+			if ("serviceWorker" in navigator) {
+			navigator.serviceWorker
+				.register("sw.js")
+				.then(serviceWorker => {
+				console.log("Service Worker registered: ", serviceWorker);
+				})
+				.catch(error => {
+				console.error("Error registering the Service Worker: ", error);
+				});
+			}
 </script>
 <script src=scripts/carousel.js></script>
 <script src=scripts/carouselItem.js></script>
