--- a/index-dev.html
+++ b/index-dev.html
@@ -208,7 +208,7 @@
 						<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
 						<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 					</ol>
-					<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt racist epistemologies in Victorian Studies.</p>
+					<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). Ultimately, the project hopes to inspire new modes of teaching that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 				</section>
 				
 				<hr class="section-divider"/>
