update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -226,7 +226,7 @@
 
 				<section aria-labelledby="coming-soon" id="upcoming">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img loading="lazy" class="image" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 992px) 692px, calc(100vw - 36px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img class="image" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-296px.jpg 296w" sizes="" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 
 					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
 
@@ -235,7 +235,7 @@
 					<ul>
 						<li>Resources and corresponding study materials (primary and secondary) on:
 							<ul>
-								<li><em>Teaching Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on 
+								<li>Teaching Mary Seacole's <em>Wonderful Adventures of Mrs Seacole in Many Lands</em> in a variety of thematic and historical contexts, including pathways focused on 
 									<ol>
 										<li>Seacole and Identity Politics: Gender, Race, Nation</li>
 										<li>Decentering Britishness</li>
