update index dev

--- a/index-dev.html
+++ b/index-dev.html
@@ -195,7 +195,7 @@
 						<li><a href="#organizers">Organizers</a></li>
 						<li><a href="#mission">Mission</a></li>
 						<li><a href="#upcoming">Coming Soon</a></li>
-						<li><a href="#syllabi">Call for Syllabi</a> (accepted on a rolling basis)</li>
+						<li><a href="#syllabi">Call for Syllabi</a></li>
 						<li><a href="#images-details">Site Image Details</a></li>
 						<li><a href="#site-code">Site Code and Accessibility</a></li>
 					</ol>
@@ -226,7 +226,7 @@
 
 				<section aria-labelledby="coming-soon" id="upcoming">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img class="image" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-214px.jpg 214w" sizes="(min-width: 1000px) 691px, (min-width: 340px) 91.41vw, calc(410vw - 1016px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
+					<img class="image" src="images/uvc_0005-deriv-1824px.jpg" srcset="images/uvc_0005-deriv-1824px.jpg 1824w, images/uvc_0005-deriv-1384px.jpg 1384w, images/uvc_0005-deriv-1184px.jpg 1184w, images/uvc_0005-deriv-912px.jpg 912w, images/uvc_0005-deriv-692px.jpg 692w, images/uvc_0005-deriv-592px.jpg 592w, images/uvc_0005-deriv-296px.jpg 296w" sizes="(min-width: 1000px) 691px, (min-width: 340px) 91.41vw, calc(410vw - 1016px)" alt="Wooden carving of snow-capped mountain and river with a canoe, Maori meeting house, and people." title="William Gee, “Carving Scene” (Tableaux [tōtara wood], Wellington, New Zealand, c.1905), Te Papa (GH007416), Museum of New Zealand | Te Papa Tongarewa, https://collections.tepapa.govt.nz/object/417717. Gift of Mrs G. M. Williams, 1965. CC BY-NC-ND 4.0 (https://creativecommons.org/licenses/by-nc-nd/4.0/).">
 
 					<h2 id="coming-soon">Coming Soon (late January / early February)</h2>
 
