--- a/index-dev.html
+++ b/index-dev.html
@@ -184,24 +184,25 @@
 				</section>
 				<!-- <div class="col-sm-1"></div> -->
 				<h1 class="header-title">Undisciplining the Victorian Classroom</h1>
-				<hr/>
-			</header>
-			
-			<main class="main" id="main">
-				
-				<aside class="announcement" aria-labelledby="toc">
-					<h2 id="toc">Table of Contents</h2>
-					<ol>
+
+				<aside class="announcement" aria-labelledby="site-sections">
+					<!-- <h2 id="site-sections">Site Sections</h2> -->
+					<ol id="site-sections">
 						<li><a href="#organizers">Organizers</a></li>
 						<li><a href="#mission">Mission</a></li>
 						<li><a href="#upcoming">Coming Soon</a></li>
 						<li><a href="#syllabi">Call for Syllabi</a></li>
 						<li><a href="#images-details">Site Image Details</a></li>
-						<li><a href="#site-code">Site Code and Accessibility</a></li>
+						<li><a href="#site-code">Site Code & Accessibility</a></li>
 					</ol>
 				</aside>
+
+				<hr/>
+			</header>
+			
+			<main class="main" id="main">
 				
-				<hr class="section-divider"/>
+				<!-- <hr class="section-divider"/> -->
 
 				<section class="organizers" aria-labelledby="organizers">
 					<h2 id="organizers">Organizers</h2>
@@ -287,7 +288,7 @@
 				<br/>
 
 				<section aria-labelledby="site-code" class="smaller">
-					<h3 id="site-code">Site Code and Accessibility</h3>
+					<h3 id="site-code">Site Code & Accessibility</h3>
 					<p>The code for this site is adapted from the <a href="https://onemorevoice.org/">One More Voice</a> project site, is released under a <a href="https://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International</a> (CC BY-NC 4.0) license, and may be reused for educational and other non-commercial purposes as long as proper attribution is given. The site has a small footprint to support low-bandwidth environments, is fully responsive for all kinds of mobile devices, and incorporates several features (including semantic HTML and ARIA attributes) to make it more accessible for people with disabilities.</p>
 				</section>
 
